# ai-switch

./: Cargo.toml  README.md
src/: cli.rs  config.rs  core.rs  error.rs  main.rs  types.rs
tests/: integration_test.rs
