[package]
name = "ai-switch"
version = "0.1.0"
edition = "2021"
description = "CLI tool to manage AI provider configurations for various coding tools"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
thiserror = "1.0"
shellexpand = "3.0"
